kube/deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: echo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo
  template:
    metadata:
      labels:
        app: echo
    spec:
      containers:
      - name: echo
        image: alexthaii/echo-springboot:latest
        ports:
        - containerPort: 8080
        imagePullPolicy: Always
